ingredients repository