@@ -1,6 +1,7 @@
 package com.leorizick.recipeapp.services.domain.service.mapping.recipe;
 
 import com.leorizick.recipeapp.dto.recipe.RecipeCreationRequest;
+import com.leorizick.recipeapp.entities.recipe.Ingredient;
 import com.leorizick.recipeapp.entities.recipe.Recipe;
 import com.leorizick.recipeapp.entities.recipe.RecipeStep;
 import com.leorizick.recipeapp.services.domain.service.config.auth.AuthenticationContext;
@@ -11,7 +12,6 @@ import org.springframework.context.annotation.Configuration;
 
 import javax.annotation.PostConstruct;
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 @Configuration
 @RequiredArgsConstructor
@@ -34,14 +34,16 @@ public class RecipeMapper {
                 recipe.setAuthor(authenticationContext.getAccount());
             }
 
+            var ingredients = src.getIngredients()
+                    .stream().map(ingredient -> modelMapper.map(ingredient, Ingredient.class)).toList();
+
             var steps = src.getSteps()
-                    .stream().map(step -> modelMapper.map(step, RecipeStep.class))
-                    .collect(Collectors.toList());
+                    .stream().map(step -> modelMapper.map(step, RecipeStep.class)).toList();
 
             recipe.setName(src.getName());
             recipe.setCategory(recipeCategoryCrud.findById(src.getCategoryId()));
             recipe.setDescription(src.getDescription());
-            recipe.setIngredients(src.getIngredients());
+            recipe.setIngredients(ingredients);
             recipe.setStep(steps);
             recipe.setComment(new ArrayList<>());
             recipe.setEnabled(true);
